--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -45,8 +45,8 @@
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --color-heading: var(--vt-c-white);
+    --color-text: var(--vt-c-white);
   }
 }
 
